; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_datetime.c_AppendTimestampSeconds.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_datetime.c_AppendTimestampSeconds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pg_tm = type { i32 }

@MAX_TIMESTAMP_PRECISION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, %struct.pg_tm*, i32)* @AppendTimestampSeconds to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @AppendTimestampSeconds(i8* %0, %struct.pg_tm* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.pg_tm*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store %struct.pg_tm* %1, %struct.pg_tm** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i8*, i8** %4, align 8
  %8 = load %struct.pg_tm*, %struct.pg_tm** %5, align 8
  %9 = getelementptr inbounds %struct.pg_tm, %struct.pg_tm* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @MAX_TIMESTAMP_PRECISION, align 4
  %13 = call i8* @AppendSeconds(i8* %7, i32 %10, i32 %11, i32 %12, i32 1)
  ret i8* %13
}

declare dso_local i8* @AppendSeconds(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
